trunk/Archive2/35/e2bf858fdd08a8/output
main.cpp: In function 'int main()':
main.cpp:12:28: error: 'Header' is an inaccessible base of 'CanData'
   Header *pt = new CanData();
                            ^
